--- a/app/src/main/res/layout/item_search_result.xml
+++ b/app/src/main/res/layout/item_search_result.xml
@@ -36,6 +36,8 @@
         android:layout_marginTop="6dp"
         android:includeFontPadding="false"
         android:text="分享20次 | 浏览140次"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:textColor="#999999"
         android:textSize="12sp"
         app:layout_constraintLeft_toLeftOf="@id/tv_car_title"
@@ -61,6 +63,8 @@
         android:layout_marginLeft="10dp"
         android:includeFontPadding="false"
         android:text="销售提成2000元"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:textColor="#333333"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/tv_car_price"
