--- a/app/src/main/res/layout/activity_put_away_detail.xml
+++ b/app/src/main/res/layout/activity_put_away_detail.xml
@@ -100,7 +100,10 @@
             <EditText
                 android:id="@+id/et_percent_up"
                 android:layout_width="94dp"
-                android:layout_height="30dp"
+                android:layout_height="25dp"
+                android:hint="%"
+                android:gravity="right"
+                android:paddingRight="@dimen/dimens_5dp"
                 android:layout_marginRight="14dp"
                 android:background="@drawable/bg_edittext"
                 app:layout_constraintBaseline_toBaselineOf="@+id/check_percent_up"
@@ -109,8 +112,11 @@
             <EditText
                 android:id="@+id/et_price_up"
                 android:layout_width="94dp"
-                android:layout_height="30dp"
+                android:layout_height="25dp"
                 android:layout_marginRight="14dp"
+                android:hint="元"
+                android:gravity="right"
+                android:paddingRight="@dimen/dimens_5dp"
                 android:background="@drawable/bg_edittext"
                 app:layout_constraintBaseline_toBaselineOf="@+id/check_price_up"
                 app:layout_constraintRight_toRightOf="parent" />
@@ -138,9 +144,11 @@
             <EditText
                 android:id="@+id/et_insurance_rebates"
                 android:layout_width="94dp"
-                android:layout_height="30dp"
+                android:layout_height="25dp"
                 android:layout_marginRight="14dp"
-
+                android:hint="%"
+                android:gravity="right"
+                android:paddingRight="@dimen/dimens_5dp"
                 android:background="@drawable/bg_edittext"
                 app:layout_constraintBaseline_toBaselineOf="@+id/tv_insurance_rebates"
                 app:layout_constraintRight_toRightOf="parent" />
@@ -159,8 +167,11 @@
             <EditText
                 android:id="@+id/et_loan_rebates"
                 android:layout_width="94dp"
-                android:layout_height="30dp"
+                android:layout_height="25dp"
                 android:layout_marginRight="14dp"
+                android:hint="%"
+                android:gravity="right"
+                android:paddingRight="@dimen/dimens_5dp"
                 android:background="@drawable/bg_edittext"
                 app:layout_constraintBaseline_toBaselineOf="@+id/tv_loan_rebates"
                 app:layout_constraintRight_toRightOf="parent" />
