--- a/app/src/main/res/layout/item_order_list.xml
+++ b/app/src/main/res/layout/item_order_list.xml
@@ -43,6 +43,7 @@
         android:id="@+id/tv_order_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
         android:text="16.8万"
         android:textColor="#FE5F55"
         android:textSize="16sp"
