--- a/app/src/main/res/layout/activity_customer_manager.xml
+++ b/app/src/main/res/layout/activity_customer_manager.xml
@@ -42,8 +42,8 @@
                 android:layout_weight="1"
                 android:background="#F2F2F2"
                 android:drawableLeft="@mipmap/search"
+                android:hint="客户名称"
                 android:paddingLeft="20dp"
-                android:text="客户名称"
                 android:textColor="#999999"
                 android:textSize="14dp"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -209,6 +209,7 @@
                     android:background="#F5F5F5" />
 
                 <LinearLayout
+                    android:id="@+id/ll_want_brand"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:gravity="center_vertical"
@@ -226,6 +227,7 @@
                         android:textSize="14sp" />
 
                     <TextView
+                        android:id="@+id/tv_want_brand"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="10dp"
@@ -247,6 +249,7 @@
                     android:background="#F5F5F5" />
 
                 <LinearLayout
+                    android:id="@+id/ll_want_type"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:gravity="center_vertical"
@@ -264,6 +267,7 @@
                         android:textSize="14sp" />
 
                     <TextView
+                        android:id="@+id/tv_want_type"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="10dp"
@@ -285,6 +289,7 @@
                     android:background="#F5F5F5" />
 
                 <LinearLayout
+                    android:id="@+id/ll_create_person"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:gravity="center_vertical"
@@ -302,6 +307,7 @@
                         android:textSize="14sp" />
 
                     <TextView
+                        android:id="@+id/tv_username"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="10dp"
