--- a/app/src/main/res/layout/activity_car_detail.xml
+++ b/app/src/main/res/layout/activity_car_detail.xml
@@ -76,6 +76,13 @@
                     android:layout_marginBottom="12dp"
                     android:src="@mipmap/search" />
 
+                <FrameLayout
+                    android:id="@+id/fl_banner"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:alpha="0"
+                    ></FrameLayout>
+
             </RelativeLayout>
 
             <TextView
