--- a/app/src/main/res/layout/layout_deal_valence.xml
+++ b/app/src/main/res/layout/layout_deal_valence.xml
@@ -11,68 +11,76 @@
         android:gravity="center"
         android:button="@null"
         android:text="不限"
-        android:background="@drawable/bg_rb_selector"
+        android:background="@drawable/bg_radiobutton"
         android:layout_width="80dp"
         android:layout_height="30dp"
-        android:layout_margin="2dp"/>
+        android:layout_margin="4.5dp"
+        android:textColor="@color/color_333333"/>
     <RadioButton
         android:gravity="center"
         android:button="@null"
         android:text="5万以下"
-        android:background="@drawable/bg_rb_selector"
+        android:background="@drawable/bg_radiobutton"
         android:layout_width="80dp"
         android:layout_height="30dp"
-        android:layout_margin="2dp"/>
+        android:layout_margin="4.5dp"
+        android:textColor="@color/color_333333"/>
     <RadioButton
         android:gravity="center"
         android:button="@null"
         android:text="5-10万"
-        android:background="@drawable/bg_rb_selector"
+        android:background="@drawable/bg_radiobutton"
         android:layout_width="80dp"
         android:layout_height="30dp"
-        android:layout_margin="2dp"/>
+        android:layout_margin="4.5dp"
+        android:textColor="@color/color_333333"/>
     <RadioButton
         android:gravity="center"
         android:button="@null"
-        android:background="@drawable/bg_rb_selector"
         android:text="10-15万"
+        android:background="@drawable/bg_radiobutton"
         android:layout_width="80dp"
-        android:layout_margin="2dp"
-        android:layout_height="30dp" />
+        android:layout_height="30dp"
+        android:layout_margin="4.5dp"
+        android:textColor="@color/color_333333" />
 
     <RadioButton
         android:gravity="center"
         android:button="@null"
-        android:background="@drawable/bg_rb_selector"
         android:text="15万-30万"
+        android:background="@drawable/bg_radiobutton"
         android:layout_width="80dp"
         android:layout_height="30dp"
-        android:layout_margin="2dp"/>
+        android:layout_margin="4.5dp"
+        android:textColor="@color/color_333333"/>
 
     <RadioButton
         android:gravity="center"
         android:button="@null"
-        android:background="@drawable/bg_rb_selector"
         android:text="30-50万"
+        android:background="@drawable/bg_radiobutton"
         android:layout_width="80dp"
         android:layout_height="30dp"
-        android:layout_margin="2dp"/>
+        android:layout_margin="4.5dp"
+        android:textColor="@color/color_333333"/>
 
     <RadioButton
         android:gravity="center"
         android:button="@null"
-        android:background="@drawable/bg_rb_selector"
         android:text="50-100万"
+        android:background="@drawable/bg_radiobutton"
         android:layout_width="80dp"
         android:layout_height="30dp"
-        android:layout_margin="2dp"/>
+        android:layout_margin="4.5dp"
+        android:textColor="@color/color_333333"/>
     <RadioButton
         android:gravity="center"
         android:button="@null"
-        android:background="@drawable/bg_rb_selector"
         android:text="100万及以上"
+        android:background="@drawable/bg_radiobutton"
         android:layout_width="80dp"
         android:layout_height="30dp"
-        android:layout_margin="2dp"/>
+        android:layout_margin="4.5dp"
+        android:textColor="@color/color_333333"/>
 
 </com.cheeshou.cheeshou.utils.MyRadioGroup>
