--- a/app/src/main/res/layout/activity_market_share_rankings.xml
+++ b/app/src/main/res/layout/activity_market_share_rankings.xml
@@ -39,16 +39,19 @@
         <RadioButton
             android:id="@+id/rb_share_rank_today"
             style="@style/vehicleheat_radio_button"
+            android:background="@drawable/line_radio_button"
             android:text="今日" />
 
         <RadioButton
             android:id="@+id/rb_share_rank_the_week"
             style="@style/vehicleheat_radio_button"
+            android:background="@drawable/line_radio_button"
             android:text="本周" />
 
         <RadioButton
             android:id="@+id/rb_share_rank_last_week"
             style="@style/vehicleheat_radio_button"
+            android:background="@drawable/line_radio_button"
             android:text="上周" />
 
         <com.cheeshou.cheeshou.view.DrawableCenterRadioButton
