--- a/app/src/main/res/layout/activity_store_report.xml
+++ b/app/src/main/res/layout/activity_store_report.xml
@@ -48,21 +48,25 @@
                 <RadioButton
                     android:id="@+id/rb_today"
                     style="@style/vehicleheat_radio_button"
+                    android:background="@drawable/line_radio_button"
                     android:text="今日" />
 
                 <RadioButton
                     android:id="@+id/rb_the_week"
                     style="@style/vehicleheat_radio_button"
+                    android:background="@drawable/line_radio_button"
                     android:text="本周" />
 
                 <RadioButton
                     android:id="@+id/rb_last_month"
                     style="@style/vehicleheat_radio_button"
+                    android:background="@drawable/line_radio_button"
                     android:text="本月" />
 
                 <RadioButton
                     android:id="@+id/rb_last_year"
                     style="@style/vehicleheat_radio_button"
+                    android:background="@drawable/line_radio_button"
                     android:text="本年" />
 
                 <RadioButton
