--- a/app/src/main/res/layout/activity_market_share.xml
+++ b/app/src/main/res/layout/activity_market_share.xml
@@ -19,7 +19,7 @@
             android:layout_height="18dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="14dp"
-            android:src="@mipmap/back" />
+            android:src="@mipmap/icon_white_back" />
 
         <TextView
             android:layout_width="wrap_content"
